--- a/QS/data_preprocessing_qs.ipynb
+++ b/QS/data_preprocessing_qs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,8 +67,8 @@
     "# rank\n",
     "rank_range = qs_2023['rank'].map({'501-510': '505', '511-520': '515', '521-530': '525', '531-540': '535', '541-550': '545', '551-560': '555',\n",
     "'561-570': '565', '571-580': '575', '581-590': '585', '591-600': '595', '601-650': '625', '651-700': '675',\n",
-    "'701-750': '725', '751-800': '775', '801-1000': '900', '1001-1200': '1100', '1201-1400': '1300'})\n",
-    "rank_woeq = qs_2023['rank'].str.replace('=', '', regex=True).str.replace('+', '', regex=True)\n",
+    "'701-750': '725', '751-800': '775', '801-1000': '900', '1001-1200': '1100', '1201-1400': '1300', '1201+': '1300'})\n",
+    "rank_woeq = qs_2023['rank'].str.replace('=', '', regex=True)\n",
     "rank_f = [rank_woeq[i] if pd.isna(rank_range[i]) else rank_range[i] for i in range(len(qs_2023['rank']))]\n",
     "qs_2023['rank'] = rank_f\n",
     "qs_2023['rank'] = qs_2023['rank'].astype(int)\n",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,307 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>University</th>\n",
-       "      <th>Total students</th>\n",
-       "      <th>PG students</th>\n",
-       "      <th>UG students</th>\n",
-       "      <th>International students</th>\n",
-       "      <th>PG students.1</th>\n",
-       "      <th>UG students.1</th>\n",
-       "      <th>Total faculty staff</th>\n",
-       "      <th>Int'l staff</th>\n",
-       "      <th>Domestic staff</th>\n",
-       "      <th>Status</th>\n",
-       "      <th>Research Output</th>\n",
-       "      <th>Size</th>\n",
-       "      <th>rank</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Massachusetts Institute of Technology (MIT)</td>\n",
-       "      <td>11,333</td>\n",
-       "      <td>60%</td>\n",
-       "      <td>40%</td>\n",
-       "      <td>3,730</td>\n",
-       "      <td>83%</td>\n",
-       "      <td>17%</td>\n",
-       "      <td>3,065</td>\n",
-       "      <td>1726.0</td>\n",
-       "      <td>1339.0</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>Very High</td>\n",
-       "      <td>M</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>University of Oxford</td>\n",
-       "      <td>20,889</td>\n",
-       "      <td>43%</td>\n",
-       "      <td>57%</td>\n",
-       "      <td>8,442</td>\n",
-       "      <td>69%</td>\n",
-       "      <td>31%</td>\n",
-       "      <td>6,708</td>\n",
-       "      <td>3097.0</td>\n",
-       "      <td>3611.0</td>\n",
-       "      <td>Public</td>\n",
-       "      <td>Very High</td>\n",
-       "      <td>L</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Stanford University</td>\n",
-       "      <td>16,164</td>\n",
-       "      <td>57%</td>\n",
-       "      <td>43%</td>\n",
-       "      <td>3,879</td>\n",
-       "      <td>81%</td>\n",
-       "      <td>19%</td>\n",
-       "      <td>4,725</td>\n",
-       "      <td>2266.0</td>\n",
-       "      <td>2459.0</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>Very High</td>\n",
-       "      <td>L</td>\n",
-       "      <td>=3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>University of Cambridge</td>\n",
-       "      <td>20,383</td>\n",
-       "      <td>39%</td>\n",
-       "      <td>61%</td>\n",
-       "      <td>7,925</td>\n",
-       "      <td>61%</td>\n",
-       "      <td>39%</td>\n",
-       "      <td>5,800</td>\n",
-       "      <td>3011.0</td>\n",
-       "      <td>2789.0</td>\n",
-       "      <td>Public</td>\n",
-       "      <td>Very High</td>\n",
-       "      <td>L</td>\n",
-       "      <td>=3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Harvard University</td>\n",
-       "      <td>23,663</td>\n",
-       "      <td>70%</td>\n",
-       "      <td>30%</td>\n",
-       "      <td>5,877</td>\n",
-       "      <td>85%</td>\n",
-       "      <td>15%</td>\n",
-       "      <td>4,646</td>\n",
-       "      <td>1524.0</td>\n",
-       "      <td>3122.0</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>Very High</td>\n",
-       "      <td>L</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1266</th>\n",
-       "      <td>Universite de Tunis</td>\n",
-       "      <td>19,438</td>\n",
-       "      <td>23.8%</td>\n",
-       "      <td>76.2%</td>\n",
-       "      <td>57</td>\n",
-       "      <td>0%</td>\n",
-       "      <td>100%</td>\n",
-       "      <td>1,174</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>1152.0</td>\n",
-       "      <td>Public</td>\n",
-       "      <td>High</td>\n",
-       "      <td>L</td>\n",
-       "      <td>1201+</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1267</th>\n",
-       "      <td>Universite de Tunis El Manar</td>\n",
-       "      <td>27,250</td>\n",
-       "      <td>37%</td>\n",
-       "      <td>63%</td>\n",
-       "      <td>585</td>\n",
-       "      <td>61%</td>\n",
-       "      <td>39%</td>\n",
-       "      <td>3,504</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>3476.0</td>\n",
-       "      <td>Public</td>\n",
-       "      <td>Very High</td>\n",
-       "      <td>L</td>\n",
-       "      <td>1201+</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1268</th>\n",
-       "      <td>Yarmouk University</td>\n",
-       "      <td>34,080</td>\n",
-       "      <td>12%</td>\n",
-       "      <td>88%</td>\n",
-       "      <td>2,826</td>\n",
-       "      <td>13%</td>\n",
-       "      <td>87%</td>\n",
-       "      <td>1,113</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>1081.0</td>\n",
-       "      <td>Public</td>\n",
-       "      <td>Medium</td>\n",
-       "      <td>XL</td>\n",
-       "      <td>1201+</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1269</th>\n",
-       "      <td>Yildiz Technical University</td>\n",
-       "      <td>33,262</td>\n",
-       "      <td>24%</td>\n",
-       "      <td>76%</td>\n",
-       "      <td>2,394</td>\n",
-       "      <td>13%</td>\n",
-       "      <td>87%</td>\n",
-       "      <td>1,688</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>1676.0</td>\n",
-       "      <td>Public</td>\n",
-       "      <td>High</td>\n",
-       "      <td>XL</td>\n",
-       "      <td>1201+</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1270</th>\n",
-       "      <td>Zagazig University</td>\n",
-       "      <td>154,303</td>\n",
-       "      <td>6%</td>\n",
-       "      <td>94%</td>\n",
-       "      <td>2,300</td>\n",
-       "      <td>34%</td>\n",
-       "      <td>66%</td>\n",
-       "      <td>5,871</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>5856.0</td>\n",
-       "      <td>Public</td>\n",
-       "      <td>High</td>\n",
-       "      <td>XL</td>\n",
-       "      <td>1201+</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1271 rows × 14 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                       University Total students PG students  \\\n",
-       "0     Massachusetts Institute of Technology (MIT)         11,333         60%   \n",
-       "1                            University of Oxford         20,889         43%   \n",
-       "2                             Stanford University         16,164         57%   \n",
-       "3                         University of Cambridge         20,383         39%   \n",
-       "4                              Harvard University         23,663         70%   \n",
-       "...                                           ...            ...         ...   \n",
-       "1266                          Universite de Tunis         19,438       23.8%   \n",
-       "1267                 Universite de Tunis El Manar         27,250         37%   \n",
-       "1268                           Yarmouk University         34,080         12%   \n",
-       "1269                  Yildiz Technical University         33,262         24%   \n",
-       "1270                           Zagazig University        154,303          6%   \n",
-       "\n",
-       "     UG students International students PG students.1 UG students.1  \\\n",
-       "0            40%                  3,730           83%           17%   \n",
-       "1            57%                  8,442           69%           31%   \n",
-       "2            43%                  3,879           81%           19%   \n",
-       "3            61%                  7,925           61%           39%   \n",
-       "4            30%                  5,877           85%           15%   \n",
-       "...          ...                    ...           ...           ...   \n",
-       "1266       76.2%                     57            0%          100%   \n",
-       "1267         63%                    585           61%           39%   \n",
-       "1268         88%                  2,826           13%           87%   \n",
-       "1269         76%                  2,394           13%           87%   \n",
-       "1270         94%                  2,300           34%           66%   \n",
-       "\n",
-       "     Total faculty staff  Int'l staff  Domestic staff   Status  \\\n",
-       "0                  3,065       1726.0          1339.0  Private   \n",
-       "1                  6,708       3097.0          3611.0   Public   \n",
-       "2                  4,725       2266.0          2459.0  Private   \n",
-       "3                  5,800       3011.0          2789.0   Public   \n",
-       "4                  4,646       1524.0          3122.0  Private   \n",
-       "...                  ...          ...             ...      ...   \n",
-       "1266               1,174         22.0          1152.0   Public   \n",
-       "1267               3,504         28.0          3476.0   Public   \n",
-       "1268               1,113         32.0          1081.0   Public   \n",
-       "1269               1,688         12.0          1676.0   Public   \n",
-       "1270               5,871         15.0          5856.0   Public   \n",
-       "\n",
-       "     Research Output Size   rank  \n",
-       "0          Very High    M      1  \n",
-       "1          Very High    L      2  \n",
-       "2          Very High    L     =3  \n",
-       "3          Very High    L     =3  \n",
-       "4          Very High    L      5  \n",
-       "...              ...  ...    ...  \n",
-       "1266            High    L  1201+  \n",
-       "1267       Very High    L  1201+  \n",
-       "1268          Medium   XL  1201+  \n",
-       "1269            High   XL  1201+  \n",
-       "1270            High   XL  1201+  \n",
-       "\n",
-       "[1271 rows x 14 columns]"
-      ]
-     },
-     "execution_count": 347,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "qs_2022"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,8 +114,8 @@
     "# rank\n",
     "rank_range = qs_2022['rank'].map({'501-510': '505', '511-520': '515', '521-530': '525', '531-540': '535', '541-550': '545', '551-560': '555',\n",
     "'561-570': '565', '571-580': '575', '581-590': '585', '591-600': '595', '601-650': '625', '651-700': '675',\n",
-    "'701-750': '725', '751-800': '775', '801-1000': '900', '1001-1200': '1100', '1201-1400': '1300'})\n",
-    "rank_woeq = qs_2022['rank'].str.replace('=', '', regex=True).str.replace('+', '', regex=True)\n",
+    "'701-750': '725', '751-800': '775', '801-1000': '900', '1001-1200': '1100', '1201-1400': '1300', '1201+': '1300'})\n",
+    "rank_woeq = qs_2022['rank'].str.replace('=', '', regex=True)\n",
     "rank_f = [rank_woeq[i] if pd.isna(rank_range[i]) else rank_range[i] for i in range(len(qs_2022['rank']))]\n",
     "qs_2022['rank'] = rank_f\n",
     "qs_2022['rank'] = qs_2022['rank'].astype(int)\n",
@@ -435,6 +135,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qs_2023 = qs_2023.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qs_2022 = qs_2022.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qs_2022.to_csv('C:/Users/alion/OneDrive/文件/GitHub/WUR-analysis/QS/qs_2022_refine.csv', index = False)\n",
+    "qs_2023.to_csv('C:/Users/alion/OneDrive/文件/GitHub/WUR-analysis/QS/qs_2023_refine.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -443,7 +178,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('tensorflow')",
+   "display_name": "tensorflow",
    "language": "python",
    "name": "python3"
   },
